<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>

    <!-- Главное меню -->
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>

    <!-- Настройки -->
    <string name="settings_title">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <!-- "Поделиться" сообщение -->
    <string name="share_app_message">Попробуйте Playlist Maker - приложение для создания плейлистов!</string>

    <!-- Поддержка -->
    <string name="support_email">student@example.com</string>
    <string name="support_email_subject">Сообщение разработчикам Playlist Maker</string>
    <string name="support_email_body">Работает!!</string>

    <!-- Ссылка на соглашение -->
    <string name="user_agreement_url">https://vivt.ru/</string>

    <!-- Поиск -->
    <string name="search_hint">Поиск</string>
    <string name="clear_search">Очистить поисковый запрос</string>
    <string name="track_artwork">Обложка трека</string>
    <string name="search_history_title">История поиска</string>
    <string name="clear_history">Очистить историю</string>
</resources>
