<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">

    <!-- Хедер -->
    <LinearLayout
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical"
        android:background="?attr/colorSurface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/arrow_left"
            style="@style/BackButtonStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_title"
            android:layout_marginStart="16dp"
            style="@style/HeaderTextStyle" />
    </LinearLayout>

    <!-- Список настроек -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Пункт со Switch -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/SettingsItemLayoutStyle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_theme"
                android:layout_centerVertical="true"
                style="@style/SettingsItemTextStyle" />

            <Switch
                android:id="@+id/switchTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <!-- 2 пункт -->
        <RelativeLayout
            android:id="@+id/shareAppLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/SettingsItemLayoutStyle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_app"
                style="@style/SettingsItemTextStyle" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/share"
                android:layout_alignParentEnd="true"
                style="@style/SettingsIconStyle" />
        </RelativeLayout>

        <!-- 2 пункт -->
        <RelativeLayout
            android:id="@+id/supportLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/SettingsItemLayoutStyle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/write_to_support"
                style="@style/SettingsItemTextStyle" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/support"
                android:layout_alignParentEnd="true"
                style="@style/SettingsIconStyle" />
        </RelativeLayout>

        <!-- 2 пункт -->
        <RelativeLayout
            android:id="@+id/userAgreementLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/SettingsItemLayoutStyle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_agreement"
                style="@style/SettingsItemTextStyle" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/arrow_right"
                android:layout_alignParentEnd="true"
                style="@style/SettingsIconStyle" />
        </RelativeLayout>


    </LinearLayout>

</LinearLayout>
