<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">

    <!-- Хедер -->
    <LinearLayout
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical"
        android:background="?attr/colorSurface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/arrow_left"
            style="@style/BackButtonStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_marginStart="16dp"
            style="@style/HeaderTextStyle" />
    </LinearLayout>

    <!-- Поисковая строка -->
    <LinearLayout
        android:id="@+id/searchContainer"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_margin="16dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/search_field_background">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/search"
            android:layout_marginRight="10sp"
            android:tint="@color/search_icon_tint"
            android:padding="2dp" />

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:textSize="16sp"
            android:textColor="@color/search_text_color"
            android:textColorHint="@color/search_hint_color"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:fontFamily="@font/ys_text_regular"
            android:maxLines="1" />

        <ImageView
            android:id="@+id/clearButton"
            android:layout_width="24dp"
            android:tint="@color/search_icon_tint"
            android:layout_height="24dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:contentDescription="@string/clear_search"
            android:padding="2dp"
            android:visibility="gone" />
    </LinearLayout>

    <!-- История поиска -->
    <LinearLayout
        android:id="@+id/searchHistoryContainer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:id="@+id/searchHistoryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_history_title"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            style="@style/SearchHistoryTitleStyle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchHistoryRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false" />

        <Button
            android:id="@+id/clearHistoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_history"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            style="@style/DarkButtonStyle" />
    </LinearLayout>

    <!-- Список треков -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tracksRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false" />

</LinearLayout>
